force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/Zendesk__Zendesk_Bulk_Sync_Response__c.object-meta.xml
<CustomObject>
    <label>Zendesk Bulk Sync Response</label>
    <nameField>
        <displayFormat>ZDRESP-{0000}</displayFormat>
        <label>Zendesk Bulk Sync Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Bulk Sync Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>