force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__Matched_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Matched_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Zendesk Bulk Sync Responses</relationshipLabel>
    <relationshipName>Zendesk_Bulk_Sync_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>