force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__Matched_SObject__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Matched_SObject__c</fullName>
    <label>Matched SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>