force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__Original_Payload__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Original_Payload__c</fullName>
    <description>Original JSON Payload received from Zendesk</description>
    <inlineHelpText>Original JSON Payload received from Zendesk</inlineHelpText>
    <label>Original Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>