force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__Status__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for manual match</fullName>
            </value>
            <value>
                <fullName>Waiting for updating Zendesk ExtID</fullName>
            </value>
            <value>
                <fullName>Waiting for creating in Zendesk</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Waiting for create in Salesforce</fullName>
            </value>
            <value>
                <fullName>Waiting for update in Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>