force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__ZD_Details__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZD_Details__c</fullName>
    <label>ZD Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>