force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__ZD_Org_Domain_Names__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZD_Org_Domain_Names__c</fullName>
    <label>ZD Org Domain Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>