force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__ZD_Tags__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZD_Tags__c</fullName>
    <label>ZD Tags</label>
    <type>TextArea</type>
</CustomField>