force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__ZD_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZD_Updated_At__c</fullName>
    <label>ZD Updated At</label>
    <type>DateTime</type>
</CustomField>