force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__ZD_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZD_User_Email__c</fullName>
    <label>ZD User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>