force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/fields/Zendesk__Zendesk_Sync_Job__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Sync_Job__c</fullName>
    <label>Zendesk Sync Job</label>
    <referenceTo>Zendesk__Zendesk_Sync_Job__c</referenceTo>
    <relationshipLabel>Zendesk Bulk Sync Responses</relationshipLabel>
    <relationshipName>Zendesk_Bulk_Sync_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>