force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/listViews/Zendesk__All.listView-meta.xml
<ListView>
    <fullName>Zendesk__All</fullName>
    <columns>NAME</columns>
    <columns>Zendesk__Status__c</columns>
    <columns>Zendesk__Matched_Account__c</columns>
    <columns>Zendesk__ZD_Name__c</columns>
    <columns>Zendesk__Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>