force-app/main/default/objects/Zendesk__Zendesk_Bulk_Sync_Response__c/listViews/Zendesk__All1.listView-meta.xml
<ListView>
    <fullName>Zendesk__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>